Adding new style classes to header items in visualizations as relevant.

--- a/app/partials/directives/barchart.html
+++ b/app/partials/directives/barchart.html
@@ -38,7 +38,7 @@
 <div class="header-container filter-container">
     <div class="legend">
 
-        <div class="filter-reset pull-right" ng-class="{true: 'hidden', false: ''}[filterSet === undefined]" title="{{filterSet.key}}={{filterSet.value}}">
+        <div class="header-item filter-reset pull-right" ng-class="{true: 'hidden', false: ''}[filterSet === undefined]" title="{{filterSet.key}}={{filterSet.value}}">
             <span class="filter-label" ng-bind="filterSet.value"></span>
             <span class="glyphicon glyphicon-remove" ng-click="clearFilterSet()"></span>
         </div>
