Created a sample visualization directive.

--- a/app/css/app.less
+++ b/app/css/app.less
@@ -38,6 +38,7 @@
 @import 'directives/linechart.less';
 @import 'directives/map.less';
 @import 'directives/queryResultsTable.less';
+@import 'directives/sample.less';
 @import 'directives/stackedBarChart.less';
 @import 'directives/sunburst.less';
 @import 'directives/tagCloud.less';
