NEON-1662 Major refactoring of the graph code.  Added callbacks to the D3 graph code for calculating node size, color, etc.  Arrowheads on links will now end at the radius of the nodes.  Added clustering of nodes that only have a single source or target.  Added text labels for cluster nodes.  Changed node color scheme:  default is blue, filters are green, clusters and purple, and linked nodes without matching data are red.  Queries for the list of nodes are now only performed on demand through the options menu to stop excessive error notifications.

--- a/app/css/directives/directedGraph.less
+++ b/app/css/directives/directedGraph.less
@@ -36,13 +36,10 @@ div {
 
     .graph-tooltip {
         position: absolute;
-        text-align: center;
-        height: 20px;
         padding: 5px;
         font: 12px sans-serif;
         background: @tooltip-background;
-        border: 0px;
-        border-radius: 8px;
+        border-radius: 4px;
         pointer-events: none;
     }
 }
@@ -51,19 +48,10 @@ div {
     padding: 10px;
     height: 100%;
     width: 100%;
+    /* Hide the area of the tooltip that overflows the visualization. */
+    overflow: hidden;
 }
 
 .node {
-  stroke: @chart-empty-dot-color;
-  stroke-width: 1.5px;
   cursor: pointer;
-}
-
-.link {
-  stroke: @chart-line-color;
-  stroke-opacity: .6;
-}
-
-.arrowhead {
-  fill: @chart-line-color;
 }
