--- a/app/partials/directives/importFile.html
+++ b/app/partials/directives/importFile.html
@@ -9,7 +9,7 @@
   </li>
 </ul>
 
-<div class="modal fade" id="importModal" tabindex="-1" role="dialog" aria-hidden="true">
+<div class="import modal fade" id="importModal" tabindex="-1" role="dialog" aria-hidden="true">
   <div class="modal-dialog">
     <div class="modal-content">
       <div class="modal-header">
@@ -17,19 +17,56 @@
         <h4 class="modal-title" id="importModalLabel">Select a file to import</h4>
       </div>
         <div class="modal-body">
-          <div id="fileDragAndDrop" class="unselectable"><span id="selectedFileIndicator" ng-bind="indicatorText"></span></div>
-          <input type="file" id="fileSelect" value="">
+            <div class="upload-file">
+                <div id="fileDragAndDrop" class="unselectable"><span id="selectedFileIndicator" ng-bind="indicatorText"></span></div>
+                <input type="file" id="fileSelect" value="">
+            </div>
+            <div class="file-info">
+                <div class="row">
+                    <div class="col-md-6">
+                        <div class="form-group">
+                            <label>Datastore Type</label>
+                            <select class="form-control" ng-model="datastoreType">
+                                <option value="mongo">Mongo</option>
+                            </select>
+                        </div>
+                    </div>
+
+                    <div class="col-md-6">
+                        <div class="form-group">
+                            <label>Datastore Host Name</label>
+                            <input type="text" class="form-control" ng-model="datastoreHost">
+                        </div>
+                    </div>
+                </div>
+
+                <div class="row">
+                    <div class="col-md-6">
+                        <div class="form-group">
+                            <label>Username</label>
+                            <input type="text" id="importUsernameInput" class="form-control"
+                                maxLength="40" ng-model="importUserName">
+                        </div>
+                    </div>
+
+                    <div class="col-md-6">
+                        <div class="form-group">
+                            <label>Database Name</label>
+                            <input type="text" id="importDatabaseInput" class="form-control"
+                                maxLength="100" ng-model="importDatabaseName">
+                        </div>
+                    </div>
+                </div>
+            </div>
         </div>
         <div class="modal-footer">
-        	<input type="text" id="importUsernameInput" class="modalFooterField" value="" maxLength="40" size="20" placeholder="Username" ng-model="importUserName">
-        	<input type="text" id="importDatabaseInput" class="modalFooterField" value="" maxLength="100" size="30" placeholder="Name for database" ng-model="importDatabaseName">
-          <button type="button" class="btn btn-default" ng-class="{true: 'disabled', false: ''}[importUserName == '' || importDatabaseName == '']" ng-click="uploadFile()">Import</button>
+            <button type="button" class="btn btn-default" ng-class="{true: 'disabled', false: ''}[importUserName == '' || importDatabaseName == '']" ng-click="uploadFile()">Import</button>
         </div>
     </div>
   </div>
 </div>
 
-<div class="modal fade" id="overwriteModal" tabindex="-1" role="dialog" aria-hidden="true">
+<div class="import modal fade" id="overwriteModal" tabindex="-1" role="dialog" aria-hidden="true">
   <div class="modal-dialog">
     <div class="modal-content">
       <div class="modal-header">
@@ -50,7 +87,7 @@
   </div>
 </div>
 
-<div class="modal fade" id="confirmChoicesModal" data-keyboard="false" data-backdrop="static" tabIndex="-1" role="dialog" aria-hidden="true">
+<div class="import modal fade" id="confirmChoicesModal" data-keyboard="false" data-backdrop="static" tabIndex="-1" role="dialog" aria-hidden="true">
   <div class="modal-dialog">
     <div class="modal-content">
       <div class="modal-header">
@@ -62,15 +99,15 @@
         <p id="convertFailedText">One or more fields failed to convert. Please try again.</p>
         <table class="importGuessesTable">
           <tr>
-            <th class="alignLeft">Field name</th>
-            <th class="centered">Example of type</th>
-            <th class="alignRight">Guessed type</th>
+            <th class="text-left">Field name</th>
+            <th class="text-center">Example of type</th>
+            <th class="text-right">Guessed type</th>
           </tr>
           <tr class="borderedRow" id="{{field.name}}-row" ng-repeat="field in nameTypePairs">
-            <td class="alignLeft">{{field.name}}</td>
-            <td class="alignLeft" id="{{field.name}}-example"></td>
-            <td class="alignRight">
-              <select class="floatRight" id="{{field.name}}-options">
+            <td class="text-left">{{field.name}}</td>
+            <td class="text-center" id="{{field.name}}-example"></td>
+            <td class="text-right">
+              <select class="form-control" id="{{field.name}}-options">
                 <option value="INTEGER" label="Integer">Integer</option>
                 <option value="LONG" label="Long">Long</option>
                 <option value="DOUBLE" label="Double">Double</option>
@@ -85,7 +122,7 @@
       </div>
       <div class="modal-footer">
         <div class="alert alert-success pull-left text-left" role="alert" ng-bind="convertingMessage" ng-show="isConverting"></div>
-        <input type="text" id="dateStringInput" class="modalFooterField" value="" maxlength="50" size="30" placeholder="Date format here if not standard" ng-hide="isConverting" ng-model="dateFormatString">
+        <input type="text" id="dateStringInput" class="modalFooterField form-control" value="" maxlength="50" size="30" placeholder="Date format here if not standard" ng-hide="isConverting" ng-model="dateFormatString">
         <button type="button" id="confirmChoicesButton" class="btn btn-default" ng-click="sendConfirmedChoices()">Confirm</button>
       </div>
     </div>
