--- a/app/partials/directives/removeDataset.html
+++ b/app/partials/directives/removeDataset.html
@@ -13,11 +13,42 @@
         <button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times;</button>
         <h4 class="modal-title" id="importModalLabel">Drop a dataset</h4>
       </div>
-      <div class="modal-body centered">
-        <p>Username</p>
-        <div><input type="text" id="dropUsernameInput" value="" maxLength="40" size="20" ng-model="removeDatasetUserName"></div>
-        <p>Dataset</p>
-        <div><input type="text" id="dropDatabaseInput" value="" maxLength="100" size="20" ng-model="removeDatasetDatabaseName"></div>
+      <div class="modal-body">
+        <div class="row">
+            <div class="col-md-6">
+                <div class="form-group">
+                    <label>Datastore Type</label>
+                    <select class="form-control" ng-model="datastoreType">
+                        <option value="mongo">Mongo</option>
+                    </select>
+                </div>
+            </div>
+
+            <div class="col-md-6">
+                <div class="form-group">
+                    <label>Datastore Host Name</label>
+                    <input type="text" class="form-control" ng-model="datastoreHost">
+                </div>
+            </div>
+        </div>
+
+        <div class="row">
+            <div class="col-md-6">
+                <div class="form-group">
+                    <label>Username</label>
+                    <input type="text" id="dropUsernameInput" class="form-control"
+                        maxLength="40" ng-model="removeDatasetUserName">
+                </div>
+            </div>
+
+            <div class="col-md-6">
+                <div class="form-group">
+                    <label>Database Name</label>
+                    <input type="text" id="dropDatabaseInput" class="form-control"
+                        maxLength="100" ng-model="removeDatasetDatabaseName">
+                </div>
+            </div>
+        </div>
       </div>
       <div class="modal-footer">
         <button type="button" class="btn btn-default" ng-click="removeDataset()" ng-class="{true: 'disabled', false: ''}[removeDatasetUserName == '' || removeDatasetDatabaseName == '']">Drop</button>
