--- a/app/partials/directives/importFile.html
+++ b/app/partials/directives/importFile.html
@@ -17,10 +17,10 @@
         <h4 class="modal-title" id="importModalLabel">Select a file to import</h4>
       </div>
         <div class="modal-body">
-            <div class="upload-file">
+            <form class="upload-file">
                 <div id="fileDragAndDrop" class="unselectable"><span id="selectedFileIndicator" ng-bind="indicatorText"></span></div>
-                <input type="file" id="fileSelect" value="">
-            </div>
+                <input type="file" id="fileSelect">
+            </form>
             <div class="file-info">
                 <div class="row">
                     <div class="col-md-6">
@@ -95,7 +95,8 @@
         <h4 class="modal-title" id="confirmModalLabel">Select Field Types</h4>
       </div>
       <div class="modal-body centered">
-      	<p id="userNameCreatedText">Your username is {{importUserName}}</p>
+      	<p id="userNameCreatedText"><b>Username:</b> {{importUserName}}</p>
+        <p id="userNameCreatedText"><b>Database Name:</b> {{importDatabaseName}}</p>
         <p id="convertFailedText">One or more fields failed to convert. Please try again.</p>
         <table class="importGuessesTable">
           <tr>
