--- a/app/partials/directives/directedGraph.html
+++ b/app/partials/directives/directedGraph.html
@@ -51,9 +51,9 @@
         </div>
 
         <div class="form-group">
-            <label>Graph Node Limit</label>
+            <label>Data Record Limit</label>
             <div class="input-group">
-                <input type="number" min="1" class="form-control" ng-model="options.nodeLimit" required>
+                <input type="number" min="1" class="form-control" ng-model="options.dataLimit" required>
                 <div class="input-group-btn">
                     <button type="button" class="btn btn-default refresh" title="Refresh" ng-click="queryForData()">
                         <span class="glyphicon glyphicon-refresh"></span>
