Changing the animation controls in the timeline to be a button group use the header-item style.

--- a/app/css/style.less
+++ b/app/css/style.less
@@ -388,6 +388,15 @@ button {
     }
 }
 
+.btn-group {
+    .header-item {
+        /* Remove the right margin set in header-item. */
+        margin-right: 0px;
+        /* Use the header-item padding instead of the btn-group>btn padding. */
+        padding: 4px 8px;
+    }
+}
+
 .filter-reset {
     margin-right: 0px;
     margin-left: 5px;
