--- a/app/partials/directives/poweredByNeon.html
+++ b/app/partials/directives/poweredByNeon.html
@@ -12,7 +12,8 @@
       <div class="modal-body">
         <p>Neon is an open-source framework used to develop custom data analysis applications. It is designed to help integrate your visualizations with your data. The Neon framework can incorporate a variety of data analysis and visualization widgets in a common webtop environment to allow analysts to explore complex data sets.</p>
         <p>For more information about Neon, please visit the <a href="http://www.neonframework.org" target="_blank">Neon Framework Page</a> or view the <a href="https://github.com/nextcenturycorporation/neon" target="_blank">Github Project</a>.</p>
-        <p><strong>Server Version:&nbsp;</strong>Neon&nbsp;<span ng-bind="versionString"></span></p>
+        <p><strong>Server Version:&nbsp;</strong>Neon&nbsp;<span ng-bind="serverVersionString"></span></p>
+        <p><strong>Dashboard Version:&nbsp;</strong>Neon GTD&nbsp;<span ng-bind="neonGTDVersionString"></span></p>
       </div>
       <div class="modal-footer">
         <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
