NEON-1661 Major changes to the D3 graph so that the SVG elements are not recreated each time the graph is updated.  Instead, nodes and links are added or removed as needed depending on the size of the old and new data.  This greatly improves graph performance.  Also removed the g node elements to improve graph performance.

--- a/app/partials/directives/directedGraph.html
+++ b/app/partials/directives/directedGraph.html
@@ -93,5 +93,5 @@
 <div class="clearfix"></div>
 
 <div class="directed-graph">
-    <div class="directed-graph-container directed-graph-container-{{uniqueId}}"></div>
+    <div class="directed-graph-container"></div>
 </div>
