NEON-1663 Major changes to the graph directive.  The graph no longer creates filters.  All links and nodes now save a unique network ID that is shared by all links and nodes in a connected network.  Hovering over or clicking on a link or node now highlights the links and nodes in that network.  Also made other stylistic improvements to the links and nodes in the graph.

--- a/app/css/directives/directedGraph.less
+++ b/app/css/directives/directedGraph.less
@@ -13,26 +13,12 @@
 // limitations under the License.
 //
 
-div {
-    .config-row-div {
-        padding-bottom: 5px;
-    }
-
-    .directed-graph {
-        height: @widget-height;
-        width: @widget-width;
-
-        div {
-            .directed-graph-container {
-                height: @widget-height;
-                width: @widget-width;
-            }
-        }
-    }
-
-    .draw-button-div {
-        padding-left: 0px;
-    }
+.directedGraphDirective {
+    padding: 10px;
+    height: 100%;
+    width: 100%;
+    /* Hide the area of the tooltip that overflows the visualization. */
+    overflow: hidden;
 
     .graph-tooltip {
         position: absolute;
@@ -42,16 +28,16 @@ div {
         border-radius: 4px;
         pointer-events: none;
     }
-}
 
-.directedGraphDirective {
-    padding: 10px;
-    height: 100%;
-    width: 100%;
-    /* Hide the area of the tooltip that overflows the visualization. */
-    overflow: hidden;
-}
+    .link {
+      cursor: pointer;
+    }
 
-.node {
-  cursor: pointer;
+    .node {
+      cursor: pointer;
+    }
+
+    .node-text {
+      cursor: pointer;
+    }
 }
