--- a/app/partials/directives/directedGraph.html
+++ b/app/partials/directives/directedGraph.html
@@ -16,13 +16,13 @@
 
         <div class="form-group" ng-show="!(hideAdvancedOptions)">
             <label>Node Field</label>
-            <select class="form-control" ng-model="options.selectedNodeField" ng-options="field.prettyName for field in fields" ng-required="true" ng-disabled="(fields.length == 0)" ng-change="clearFilters()">
+            <select class="form-control" ng-model="options.selectedNodeField" ng-options="field.prettyName for field in fields" ng-required="true" ng-disabled="(fields.length == 0)" ng-change="queryForData()">
             </select>
         </div>
 
         <div class="form-group" ng-show="!(hideAdvancedOptions)">
             <label>Linked Node(s) Field</label>
-            <select class="form-control" ng-model="options.selectedLinkField" ng-options="field.prettyName for field in fields" ng-required="false" ng-disabled="(fields.length == 0)" ng-change="clearFilters()">
+            <select class="form-control" ng-model="options.selectedLinkField" ng-options="field.prettyName for field in fields" ng-required="false" ng-disabled="(fields.length == 0)" ng-change="queryForData()">
                 <option value="">None</option>
             </select>
         </div>
@@ -34,19 +34,19 @@
         </div>
 
         <div class="form-group" ng-hide="!(options.selectedNodeField && options.selectedNodeField.columnName)">
-            <label ng-bind="'Set Filter on ' + options.selectedNodeField.prettyName"></label>
+            <label ng-bind="'Select ' + options.selectedNodeField.prettyName"></label>
             <div class="input-group">
-                <input type="text" class="form-control" placeholder="{{'Enter ' + options.selectedNodeField.prettyName + ' to Filter'}}" ng-model="options.selectedNode" ng-disabled="!(options.selectedNodeField)">
+                <input type="text" class="form-control" placeholder="{{'Enter ' + options.selectedNodeField.prettyName + '...'}}" ng-model="options.selectedNode" ng-disabled="!(options.selectedNodeField)">
                 <div class="input-group-btn">
-                    <button type="button" class="btn btn-default refresh" title="Add Node Filter" ng-click="selectNode()">
+                    <button type="button" class="btn btn-default refresh" title="Select Node" ng-click="selectNodeNetworkFromValue(options.selectedNode)">
                         <span class="glyphicon glyphicon-plus"></span>
                     </button>
                 </div>
             </div>
 
             <div class="input-group">
-                <select class="form-control" ng-model="options.selectedNode" ng-options="node for node in nodes track by node" ng-required="false" ng-disabled="(nodes.length == 0) || !(options.selectedNodeField)" ng-change="selectNode()">
-                    <option value="" ng-bind="'Select ' + options.selectedNodeField.prettyName + ' to Filter...'"></option>
+                <select class="form-control" ng-model="options.selectedNode" ng-options="node for node in databaseNodeValues track by node" ng-required="false" ng-disabled="(databaseNodeValues.length == 0) || !(options.selectedNodeField)" ng-change="selectNodeNetworkFromValue(options.selectedNode)">
+                    <option value="" ng-bind="'Select ' + options.selectedNodeField.prettyName + '...'"></option>
                 </select>
                 <div class="input-group-btn">
                     <button type="button" class="btn btn-default refresh" title="Refresh Node List" ng-click="queryForData(false, true)">
@@ -83,11 +83,6 @@
     <button type="button" class="btn btn-default header-item" title="Load Graph" ng-click="queryForData(true)">
         Load Graph
     </button>
-
-    <div class="header-item filter-reset pull-right" ng-repeat="value in filteredNodes" title="{{options.selectedNodeField.prettyName}}={{value}}">
-        <span class="filter-label" ng-bind="value"></span>
-        <span class="glyphicon glyphicon-remove" ng-click="removeFilter(value)"></span>
-    </div>
 </div>
 
 <div class="clearfix"></div>
