NEON-1666 Created the Newsfeed visualization based on Ringtail's content stream.  The Newsfeed subscribes to news and news_highlights events and shows the data in a list ordered by date.  The Graph now publishes news events (containing node ID, date, name, and text from its node network queries) and news_highlighted events (containing node IDs from its selected node networks).  Also added name and text fields to the graph's options menu.

--- a/app/css/app.less
+++ b/app/css/app.less
@@ -38,6 +38,7 @@
 @import 'directives/importFile.less';
 @import 'directives/linechart.less';
 @import 'directives/map.less';
+@import 'directives/newsfeed.less';
 @import 'directives/queryResultsTable.less';
 @import 'directives/sample.less';
 @import 'directives/stackedBarChart.less';
