--- a/app/partials/directives/directedGraph.html
+++ b/app/partials/directives/directedGraph.html
@@ -33,6 +33,18 @@
             </select>
         </div>
 
+        <div class="form-group" ng-show="!(hideAdvancedOptions)">
+            <label>Name Field</label>
+            <select class="form-control" ng-model="options.selectedNameField" ng-options="field.prettyName for field in fields" ng-required="true" ng-disabled="(fields.length == 0)" ng-change="queryForData()">
+            </select>
+        </div>
+
+        <div class="form-group" ng-show="!(hideAdvancedOptions)">
+            <label>Text Field</label>
+            <select class="form-control" ng-model="options.selectedTextField" ng-options="field.prettyName for field in fields" ng-required="true" ng-disabled="(fields.length == 0)" ng-change="queryForData()">
+            </select>
+        </div>
+
         <div class="form-group" ng-hide="!(options.selectedNodeField && options.selectedNodeField.columnName)">
             <label ng-bind="'Select ' + options.selectedNodeField.prettyName"></label>
             <div class="input-group">
