--- a/app/partials/directives/timelineSelector.html
+++ b/app/partials/directives/timelineSelector.html
@@ -90,7 +90,7 @@
     </div>
 
     <h4 class="pull-left">
-        <span class="count text-primary" ng-bind="recordCount"></span> records
+        <span class="count text-primary" ng-bind="recordCount | number"></span> records
     </h4>
 
     <div class="neon-datetimepicker dropdown pull-left">
